<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="70dp"
    android:layout_margin="6dp"
    android:id="@+id/CardView"
    app:cardCornerRadius="6dp"
    app:cardElevation="10dp"
    android:background="@drawable/rv_icon">


    <ImageView
        android:id="@id/contactImage"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center|left"
        android:layout_weight="1"
        android:transitionName="smale_photo"
        android:foregroundGravity="left|center"
        android:layout_margin="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/i1" />

    <TextView
        android:id="@id/name_surname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginStart="10dp"
        android:textSize="18sp"
        android:textColor="@color/text_colour_black"
        android:fontFamily="@font/opensans_semibold"
        android:text="@string/name_surname"
        app:layout_constraintStart_toEndOf="@+id/contactImage"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/career"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:layout_marginStart="10dp"
        android:textSize="14sp"
        android:textColor="@color/text_colour_black"
        android:fontFamily="@font/opensans_semibold"
        android:text="@string/career"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/contactImage" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/btDelete"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:background="@drawable/basket_animation"
        android:contentDescription="@string/delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.568"
        app:srcCompat="@drawable/basket_orange" />

    </androidx.constraintlayout.widget.ConstraintLayout>