<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="260dp"
    android:layout_gravity="center">

    <androidx.cardview.widget.CardView
        android:id="@+id/Card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/background"
        app:cardCornerRadius="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="300dp"
            android:layout_height="260dp">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_name_surname_dialog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="28dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/opensans_semibold"
                android:foregroundTint="#804F4F"
                android:hint="@string/name_surname"
                android:textSize="16sp"
                android:minHeight="48dp"
                android:backgroundTint="@color/text_colour_white"
                android:textColorHint="@color/text_colour_white"
                android:textColor="@color/text_colour_white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_career_dialog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="28dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/opensans_semibold"
                android:hint="@string/career"
                android:textSize="16sp"
                android:backgroundTint="@color/text_colour_white"
                android:textColorHint="@color/text_colour_white"
                android:textColor="@color/text_colour_white"
                android:minHeight="48dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_name_surname_dialog" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/add_contact_dialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="28dp"
                android:backgroundTint="@color/background"
                android:text="@string/save"
                android:textAllCaps="false"
                android:textColor="@color/text_colour_white"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>